--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -16,6 +16,21 @@ body {
     display: flex;
 }
 
+
+
+
+    .search-result {
+        cursor: pointer;
+        padding: 5px;
+        border: 1px solid #ccc;
+        margin: 2px 0;
+    }
+    .search-result:hover {
+        background-color: #f0f0f0;
+    }
+
+
+
 /* Botones */
 .btn {
     border: none;
